# MonadRandom

./: .gitignore  .travis.yml  CHANGES.markdown  MonadRandom.cabal
.github/workflows/: haskell-ci.yml
Control/Monad/: Random.hs
Control/Monad/Random/: Class.hs  Lazy.hs  Strict.hs
Control/Monad/Trans/: Random.hs
Control/Monad/Trans/Random/: Lazy.hs  Strict.hs
