name:                MonadRandom
version:             0.4
synopsis:            Random-number generation monad.
description:         Support for computations which consume random values.
license:             OtherLicense
license-file:        LICENSE
author:              Cale Gibbard and others
maintainer:          Brent Yorgey <byorgey@gmail.com>
bug-reports:         https://github.com/byorgey/MonadRandom/issues
category:            Control
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  CHANGES.markdown
source-repository head
  type:     git
  location: git://github.com/byorgey/MonadRandom.git

library
  exposed-modules:     Control.Monad.Random, Control.Monad.Random.Class
  build-depends:       base >= 2 && < 5, transformers >= 0.3 && < 0.5, transformers-compat == 0.4.*, mtl, random
  ghc-options:         -Wall
  default-language:    Haskell2010
