name:                MonadRandom
version:             0.4.2.3
synopsis:            Random-number generation monad.
description:         Support for computations which consume random values.
license:             OtherLicense
license-file:        LICENSE
author:              Cale Gibbard and others
maintainer:          Brent Yorgey <byorgey@gmail.com>
bug-reports:         https://github.com/byorgey/MonadRandom/issues
category:            Control
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  CHANGES.markdown
tested-with:
  GHC==7.4.2,
  GHC==7.6.3,
  GHC==7.8.4,
  GHC==7.10.3,
  GHC==8.0.1

source-repository head
  type:     git
  location: git://github.com/byorgey/MonadRandom.git

library
  exposed-modules:     Control.Monad.Random, Control.Monad.Random.Class
  build-depends:       base >= 2 && < 5,
                       transformers >= 0.3 && < 0.6,
                       transformers-compat >= 0.4 && < 0.6,
                       mtl >= 2.1 && < 2.3,
                       random
  ghc-options:         -Wall
  default-language:    Haskell2010
